// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SigninForm > mounts without error 1`] = `
"<div class="px-4 py-8 md:px-6 lg:px-8 flex align-items-center justify-content-center">
  <div class="surface-card p-4 shadow-2 border-round w-full lg:w-4">
    <div class="text-center mb-5">
      <div class="text-900 text-3xl font-medium mb-3">DEMO SHOP</div><span class="text-600 font-medium line-height-3">Login to your personal account</span>
    </div>
    <form>
      <div class="mb-3"><label for="email1" class="block text-900 font-medium mb-2">Username</label><input class="p-inputtext p-component w-full mb-1" data-pc-name="inputtext" data-pc-section="root" id="email1" type="text" placeholder="Enter your username"><small class="p-error">&nbsp;</small></div>
      <div class="mb-5"><label for="password1" class="block text-900 font-medium mb-2">Password</label><input class="p-inputtext p-component w-full mb-1" data-pc-name="inputtext" data-pc-section="root" id="password1" type="password" placeholder="Enter your password"><small class="p-error">&nbsp;</small></div>
      <!--v-if--><button class="p-button p-component w-full" type="submit" aria-label="Sign in" data-pc-name="button" data-pc-section="root"><span class="p-button-icon p-button-icon-left pi pi-user" data-pc-section="icon"></span><span class="p-button-label" data-pc-section="label">Sign in</span>
        <!---->
      </button>
    </form>
  </div>
</div>"
`;

exports[`SigninForm > shows error when login is not valid 1`] = `
"<div class="px-4 py-8 md:px-6 lg:px-8 flex align-items-center justify-content-center">
  <div class="surface-card p-4 shadow-2 border-round w-full lg:w-4">
    <div class="text-center mb-5">
      <div class="text-900 text-3xl font-medium mb-3">DEMO SHOP</div><span class="text-600 font-medium line-height-3">Login to your personal account</span>
    </div>
    <form>
      <div class="mb-3"><label for="email1" class="block text-900 font-medium mb-2">Username</label><input class="p-inputtext p-component p-filled w-full mb-1" data-pc-name="inputtext" data-pc-section="root" id="email1" type="text" placeholder="Enter your username"><small class="p-error">&nbsp;</small></div>
      <div class="mb-5"><label for="password1" class="block text-900 font-medium mb-2">Password</label><input class="p-inputtext p-component w-full mb-1" data-pc-name="inputtext" data-pc-section="root" id="password1" type="password" placeholder="Enter your password"><small class="p-error">&nbsp;</small></div>
      <!--v-if--><button class="p-button p-component w-full" type="submit" aria-label="Sign in" data-pc-name="button" data-pc-section="root"><span class="p-button-icon p-button-icon-left pi pi-user" data-pc-section="icon"></span><span class="p-button-label" data-pc-section="label">Sign in</span>
        <!---->
      </button>
    </form>
  </div>
</div>"
`;
